--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 html { 
-  background: url('./images/BG.png') no-repeat center center fixed;
+  background: url('./Images/BG.png') no-repeat center center fixed;
   background-size: cover;
 }
 
